--- a/index.html
+++ b/index.html
@@ -7,38 +7,38 @@
     <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./styles.css" />
-    <script src="./index.js"></script>
+    <script src="./index.js" defer></script>
   </head>
   <body>
     <header><h1>Tic Tac Toe</h1></header>
     <div class="center">
       <div class="grid-container">
         <div class="grid-item">
-          <div class="content">X</div>
+          <div class="content" id="c0"></div>
         </div>
         <div class="grid-item">
-          <div class="content">X</div>
+          <div class="content" id="c1"></div>
         </div>
         <div class="grid-item">
-          <div class="content">0</div>
+          <div class="content" id="c2"></div>
         </div>
         <div class="grid-item">
-          <div class="content">0</div>
+          <div class="content" id="c3"></div>
         </div>
         <div class="grid-item">
-          <div class="content">X</div>
+          <div class="content" id="c4"></div>
         </div>
         <div class="grid-item">
-          <div class="content">0</div>
+          <div class="content" id="c5"></div>
         </div>
         <div class="grid-item">
-          <div class="content">X</div>
+          <div class="content" id="c6"></div>
         </div>
         <div class="grid-item">
-          <div class="content">0</div>
+          <div class="content" id="c7"></div>
         </div>
         <div class="grid-item">
-          <div class="content">X</div>
+          <div class="content" id="c8"></div>
         </div>
       </div>
     </div>
