added more html related to players and winning

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <header><h1>Tic Tac Toe</h1></header>
+    <div class="winner">Name has won!</div>
     <div class="center">
       <div class="grid-container">
         <div class="grid-item">
@@ -39,6 +40,16 @@
         </div>
         <div class="grid-item">
           <div class="content" id="c8"></div>
+        </div>
+      </div>
+      <div class="players">
+        <div class="player1">
+          <p class="player1-name">Player 1</p>
+          <p class="player1-type">0</p>
+        </div>
+        <div class="player2">
+          <p class="player2-name">Player 2</p>
+          <p class="player2-type">X</p>
         </div>
       </div>
     </div>
